fix(groupApiService): fix getGroups call